--- a/style.css
+++ b/style.css
@@ -36,9 +36,15 @@ ul li {
     border: 1px solid grey;
 }
 
-.carousel {
+#caroussel  {
     background-color: rgb(238, 238, 238);;
     height: 250px;
+}
+
+#caroussel .TitleCrsl {
+    display: flex; 
+    justify-content: center;
+    justify-content: space-around;
 }
 
 .Title {
@@ -50,7 +56,7 @@ ul li {
     Margin: 30px;
 }
 
-.Articles {
+#Profil {
     display: flex;
     justify-content: space-around;
     margin-bottom: 50px;
@@ -92,4 +98,11 @@ select {
 
 textarea {
     height: 100px;
+}
+
+footer {
+    background-color: rgb(238, 238, 238);
+    height: 500px;
+    display: flex;
+    justify-content: space-around;
 }
