--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
     margin-right: 10%;
 }
 
+a {
+    color: white;
+    font-style: normal;
+}
+
 .Header {
     background-color: grey;
     display: flex;
@@ -34,17 +39,25 @@ ul li {
     background-color: rgb(238, 238, 238);
     color: grey;
     border: 1px solid grey;
+    height: 25px;
 }
 
 #caroussel  {
     background-color: rgb(238, 238, 238);;
     height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #caroussel .TitleCrsl {
-    display: flex; 
-    justify-content: center;
-    justify-content: space-around;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#caroussel .TitleCrsl p {
+   padding-top: 10px;
 }
 
 .Title {
@@ -53,7 +66,7 @@ ul li {
     font-size: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(121, 121, 121);
-    Margin: 30px;
+    Margin: 60px;
 }
 
 #Profil {
@@ -66,6 +79,8 @@ ul li {
     width: 30%;
     background-color:  rgb(238, 238, 238);
     height: 250px;
+    border: solid 1px;
+    margin: 20px;
 }
 
 .Form {
